<resources>
    <string name="app_name">Facturas</string>
    <string name="filter_screen_button_from_text">dia/mes/año</string>
    <string name="filter_screen_button_until_text">dia/mes/año</string>
    <string name="filter_screen_until_text">Hasta:</string>
    <string name="filter_screen_from_text">Desde:</string>
    <string name="filter_screen_by_ammount_text">Por un importe</string>
    <string name="filter_invoice">Filtrar Facturas</string>
    <string name="filter_screen_cancelled_text">Anulada</string>
    <string name="filter_screen_pending_payment_text">Pendiente de pago</string>
    <string name="filter_screen_payment_plan_screen">Plan de pago</string>
    <string name="filter_screen_fixed_free_text">Cuota fija</string>
    <string name="issue_date">Fecha de emision</string>
    <string name="filter_screen_button_apply_text">Aplicar</string>
    <string name="filter_screen_selected_ammount_counter">%d €</string>
    <string name="filter_screen_restart_filters_button_text">Eliminar Filtros</string>
    <string name="functionality_not_available">Esta funcionalidad no está disponible</string>
    <string name="button_close">Cerrar</string>
    <string name="filter_scrreen_by_status_text">Por estado</string>
    <string name="invoice_history">Historial De Facturas</string>
    <string name="day_month_year">dia/mes/año</string>
    <string name="no_invoices">No Hay Facturas que coincidan con el filtro</string>
    <string name="date">yyy/mmm/ddd</string>
    <string name="status">Estado</string>
    <string name="ammount">Cuantia</string>
    <string name="consuption">Consumo</string>
    <string name="back">Atras</string>
    <string name="smart_solar_screen_my_installation_text_option">Mi instalación</string>
    <string name="smart_solar_screen_energy_text_option">Energia</string>
    <string name="smart_solar_screen_details_option_text">Detalles</string>
    <string name="login_editText_user">Usuario</string>
    <string name="login_editText_password">Contraseña</string>
    <string name="login_screen_forget_data_button_text">He olvidado mis datos</string>
    <string name="login_screen_remember_user_checkbox_text">Recordar Usuario</string>
    <string name="login_screen_enter_button_text">Entrar</string>
    <string name="login_screen_also_text">También puedes</string>
    <string name="login_screen_register_button_text">Regístrate</string>
    <string name="forgot_password_screen_insert_email_text">Introduce tu dirección de e-mail</string>
    <string name="forgot_pasword_screen_instructions_text">Introduce tu direccion de email y le enviaremos un correo con su nueva contraseña</string>
    <string name="forgot_password_screen_send_email_button_text">Enviar</string>
    <string name="forgot_password_screen_also_text">Tambien puedes</string>
    <string name="forgot_password_screen_sing_in_button_text">Iniciar Sesion</string>
    <string name="insert_your_password">Introduce tu contraseña</string>
    <string name="repeat_your_password">Repite la contraseña</string>
    <string name="sing_up_screen_register_button_text">Registrate</string>
    <string name="sing_up_login_text">Iniciar Sesion</string>
    <string name="sing_up_passwords_conditions_text">*Debe contener mayúsculas, minusculas y números</string>
    <string name="web_view_explaining_text">Desde una aplicación Android, se pude acceder a páginas webs, mediante el nave-gador externo o mediante Webviews</string>
    <string name="web_view_screen_open_external_navigator">Abrir Navegador externo</string>
    <string name="smart_details_example_number">ES0002100000000199LJ1FA000</string>
    <string name="smart_solar_text">Estamos trabajando en mejorar la App. Tus paneles solares siguen produciendo, en breve podras seguir viendo tu produccion solar. Sentimos las molestias</string>
    <string name="choose_practice_1_text">Práctica 1</string>
    <string name="smart_screen_details_installation_power_text">Potencia de instalacion</string>
    <string name="smart_details_screen_price_pvpc">Precio PVPC</string>
    <string name="smart_details_compensation_surpluses_text">Compensación de excendentes</string>
    <string name="smart_details_consumption_text">Con excedentes y compensación individual- Consumo</string>
    <string name="smart_details_autoconsuption_type_text">Tipo autoconsumo</string>
    <string name="smart_details_request_not_received_text">No hemos recibido ninguna solicitud de autoconsumo</string>
    <string name="smart_details_registration_request_status_text">Estado solicitud alta autoconsumidor</string>
    <string name="smart_details_autoservice_code_text">CAU(Código de autoservicio)</string>
    <string name="filter_screen_paid_text">Pagada</string>
    <string name="web_view_screen_open_webview">Abrir webView</string>
    <string name="smart_solar_screen_title_text">Smart Solar</string>
    <string name="sing_up_enter_your_email_text">Introduce tu dirección de e-mail</string>
    <string name="selec_practice_logout_button_text">Logout</string>
    <string name="select_practice_title">Prácticas Android</string>
    <string name="login_screen_password_hint">contraseña</string>
    <string name="encryption_key">tu_clave_de_encriptacion</string>
    <string name="no_results">No hay resultados</string>


</resources>