<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.fragments.SmartSolarDataFragment">

    <TextView
        android:id="@+id/autoConsumption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/lightGray"
        android:text="@string/smart_details_autoservice_code_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <EditText
        android:id="@+id/editTextCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/smart_details_example_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoConsumption" />

    <TextView
        android:id="@+id/textStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/lightGray"
        android:text="@string/smart_details_registration_request_status_text"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@+id/editTextCode"
        app:layout_constraintTop_toBottomOf="@+id/editTextCode" />

    <EditText
        android:id="@+id/edittextStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:text="@string/smart_details_request_not_received_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textStatus" />


    <TextView
        android:id="@+id/textAutoConsuptionType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/lightGray"
        android:text="@string/smart_details_autoconsuption_type_text"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittextStatus" />

    <EditText
        android:id="@+id/editTextAutoConsuptionType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:text="@string/smart_details_consumption_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAutoConsuptionType" />


    <TextView
        android:id="@+id/textSurplusesCompensation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/lightGray"
        android:text="@string/smart_details_compensation_surpluses_text"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAutoConsuptionType" />

    <EditText
        android:id="@+id/editSurplusesCompensation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/smart_details_screen_price_pvpc"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSurplusesCompensation" />

    <TextView
        android:id="@+id/textInstallationPower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/lightGray"
        android:layout_marginTop="15dp"
        android:text="@string/smart_screen_details_installation_power_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSurplusesCompensation" />

    <EditText
        android:id="@+id/editTextInstallationPower"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="5kWp"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInstallationPower" />
</androidx.constraintlayout.widget.ConstraintLayout>