<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".ui.activities.SingUpActivity">


    <ImageView
        android:id="@+id/ivIberdrolaLogo"
        android:layout_width="197dp"
        android:layout_height="68dp"
        app:layout_constraintBottom_toTopOf="@+id/signupSpaceTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/ic_logo_iberdrola_cli" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextUser"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:textSize="14dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupSpaceTop"
        tools:layout_editor_absoluteY="250dp" >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sing_up_enter_your_email_text"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextPassword"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="14dp"
        app:endIconMode="password_toggle"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@id/editTextRepeatPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUser">

        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insert_your_password"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextRepeatPassword"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:boxBackgroundColor="@android:color/transparent"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/repeat_your_password"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/buttonEnter"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:text="@string/sing_up_screen_register_button_text"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@id/tvAlso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupSpaceBottom"
        tools:layout_editor_absoluteY="491dp" />

    <Button
        android:id="@+id/signupButtonLogin"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/sing_up_login_text"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAlso"
        app:strokeColor="@color/greenProject" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sing_up_passwords_conditions_text"
        android:textColor="@color/lightGray"
        app:layout_constraintBottom_toTopOf="@id/signupSpaceBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRepeatPassword" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/dividerLeft"
        android:layout_width="110dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="@id/tvAlso"
        app:layout_constraintEnd_toStartOf="@+id/tvAlso"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvAlso"
        tools:layout_editor_absoluteY="628dp" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/dividerRight"
        android:layout_width="110dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvAlso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvAlso"
        app:layout_constraintTop_toTopOf="@+id/tvAlso" />

    <TextView
        android:id="@+id/tvAlso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_screen_also_text"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@id/signupButtonLogin"
        app:layout_constraintEnd_toStartOf="@+id/dividerRight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dividerLeft"
        app:layout_constraintTop_toBottomOf="@id/buttonEnter"
        tools:layout_editor_absoluteY="624dp" />

    <Space
        android:id="@+id/signupSpaceTop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivIberdrolaLogo" />

    <Space
        android:id="@+id/signupSpaceBottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonEnter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

</androidx.constraintlayout.widget.ConstraintLayout>